# chatty

./: .gitignore  Cargo.toml  Makefile  README.md  crates.js  help.html  search-index.js  settings.html  source-files.js
.github/workflows/: general.yml  rustdoc.yml
audio_chat/: all.html  fn.main.html  index.html  struct.Cli.html
audio_mqtt_server/: all.html  constant.AUDIO_MQTT_TOPIC.html  fn.main.html  index.html  sidebar-items.js  struct.AudioMessage.html  struct.Cli.html
audio_to_mqtt/: all.html  fn.create_message.html  fn.main.html  index.html  sidebar-items.js  struct.Cli.html
chatty/: all.html  index.html  sidebar-items.js
chatty/audio/: fn.record_audio_with_cli.html  fn.record_audio_with_cli_to_memory.html  index.html  sidebar-items.js
chatty/chat_manager/: index.html  sidebar-items.js  struct.ChatHistory.html  struct.MqttChatStreamDisplay.html  trait.ChatStreamDisplay.html
chatty/cli_history/: index.html  sidebar-items.js  struct.InMemoryHistory.html
chatty/configuration/: fn.get_project_dirs.html  index.html  sidebar-items.js  struct.AppConfig.html  struct.MqttConfig.html
chatty/mqtt/: fn.start_mqtt_service.html  fn.start_mqtt_service_with_subs.html  index.html  sidebar-items.js
chatty/utils/: constant.CHAT_GPT_KNOWLEDGE_CUTOFF.html  constant.CHAT_GPT_MODEL_NAME.html  constant.CHAT_GPT_MODEL_TOKEN_LIMIT.html  constant.DEFAULT_SYSTEM_INSTRUCTIONS_KEY.html  constant.INCREASING_TREND_EMOJI.html  constant.QUESTION_MARK_EMOJI.html  constant.ROBOT_EMOJI.html  constant.SYSTEM_EMOJI.html  constant.VOICE_TO_TEXT_TRANSCRIBE_MODEL.html  constant.VOICE_TO_TEXT_TRANSCRIBE_MODEL_ENGLISH_LANGUAGE.html  fn.generate_system_instructions.html  fn.now.html  fn.now_rfc3339.html  fn.setup_tracing.html  fn.wait_for_enter.html  index.html  sidebar-items.js
chatty_smart_home/: all.html  constant.SMART_HOME_MQTT_TOPIC.html  constant.SMART_HOME_RESET_CHAT_MANAGER_COMMAND.html  constant.SMART_HOME_TEXT_OUTPUT_TOPIC.html  constant.SMART_HOME_VOICE_COMMAND.html  enum.ColorMode.html  enum.ColorTemperature.html  enum.LightState.html  fn.extract_json.html  fn.main.html  index.html  sidebar-items.js  struct.AudioMessage.html  struct.Cli.html  struct.HomeLightsState.html  struct.Light.html  struct.ResponseMessage.html  struct.SmartHomeState.html
configuration/: settings.yaml
debian/: service
gpt_cli/: all.html  enum.UserActions.html  fn.main.html  index.html  sidebar-items.js  struct.Cli.html
implementors/chatty/chat_manager/: trait.ChatStreamDisplay.js
implementors/clap/derive/: trait.Args.js  trait.CommandFactory.js  trait.FromArgMatches.js  trait.Parser.js
implementors/core/clone/: trait.Clone.js
implementors/core/default/: trait.Default.js
implementors/core/fmt/: trait.Debug.js
implementors/core/marker/: trait.Copy.js  trait.Freeze.js  trait.Send.js  trait.Sync.js  trait.Unpin.js
implementors/core/panic/unwind_safe/: trait.RefUnwindSafe.js  trait.UnwindSafe.js
implementors/dialoguer/history/: trait.History.js
implementors/schemars/: trait.JsonSchema.js
implementors/serde/de/: trait.Deserialize.js
implementors/serde/ser/: trait.Serialize.js
smart_home_experiment/: all.html  constant.SMART_HOME_MQTT_TOPIC.html  enum.LightState.html  fn.main.html  fn.wait_for_enter.html  fn.wait_for_first_mqtt_message.html  index.html  sidebar-items.js  struct.Alarm.html  struct.Cli.html  struct.HomeLightsState.html  struct.SmartHomeState.html
smart_home_experiment_v2/: all.html  constant.SMART_HOME_MQTT_TOPIC.html  enum.ColorMode.html  enum.ColorTemperature.html  enum.LightState.html  fn.extract_json.html  fn.main.html  fn.wait_for_first_mqtt_message.html  index.html  sidebar-items.js  struct.Cli.html  struct.HomeLightsState.html  struct.Light.html  struct.SmartHomeState.html
src/: audio.rs  chat_manager.rs  cli_history.rs  configuration.rs  lib.rs  main.rs  mqtt.rs  utils.rs
src/audio_chat/: audio_chat.rs.html
src/audio_mqtt_server/: audio_mqtt_server.rs.html
src/audio_to_mqtt/: audio_to_mqtt.rs.html
src/chatty/: audio.rs.html  chat_manager.rs.html  cli_history.rs.html  configuration.rs.html  lib.rs.html  mqtt.rs.html  utils.rs.html
src/chatty_smart_home/: chatty_smart_home.rs.html
src/gpt_cli/: gpt_cli.rs.html
src/smart_home_experiment/: smart_home_experiment.rs.html
src/smart_home_experiment_v2/: smart_home_experiment_v2.rs.html
