[package]
authors = ["David Michael Weis <dweis7@gmail.com>"]
description = "OpenAI playground"
edition = "2021"
license = "MIT OR APACHE"
name = "chatty"
publish = false
readme = "README.md"
repository = "https://github.com/dmweis/chatty"
version = "0.1.0"

[[bin]]
name = "audio"
required-features = ["audio"]

[features]
audio = ["cpal", "hound", "tempdir"]
default = []

[dependencies]
futures = "0.3"
tokio = {version = "1.25", features = ["macros", "rt-multi-thread"]}

anyhow = "1.0"
thiserror = "1.0"

async-openai = "0.8.0"

clap = {version = "4.1.8", features = ["derive"]}
config = "0.13.3"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"

tracing = {version = "0.1", features = ["log"]}
tracing-subscriber = {version = "0.3", features = [
  "registry",
  "env-filter",
  "json",
]}

# audio
cpal = {version = "0.15.0", optional = true}
hound = {version = "3.5", optional = true}
tempdir = {version = "0.3.7", optional = true}
