[package]
authors = ["David Michael Weis <dweis7@gmail.com>"]
default-run = "gpt-cli"
description = "OpenAI playground"
edition = "2021"
license = "MIT OR APACHE"
name = "chatty"
publish = false
readme = "README.md"
repository = "https://github.com/dmweis/chatty"
version = "0.1.0"

[[bin]]
name = "audio_chat"
required-features = ["audio"]

[[bin]]
name = "gpt-cli"
path = "src/bin/gpt_cli.rs"

[[bin]]
name = "smart_home_experiment"
required-features = ["audio"]

[[bin]]
name = "smart_home_experiment_v2"
required-features = ["audio"]

[[bin]]
name = "audio_to_mqtt"
required-features = ["audio"]

[features]
audio = ["cpal", "hound", "tempdir"]
default = ["mqtt", "audio"]
mqtt = ["rumqttc"]

[dependencies]
futures = "0.3"
tokio = {version = "1.25", features = ["macros", "rt-multi-thread"]}

anyhow = "1.0"
thiserror = "1.0"

# openai
# async-openai = {git = "https://github.com/dmweis/async-openai.git", branch = "main"}
async-openai = {version = "0.9.4"}
# this lib is a bit odd
tiktoken-rs = {git = "https://github.com/dmweis/tiktoken-rs.git", branch = "optional_python"}

clap = {version = "4.1.8", features = ["derive"]}
config = "0.13.3"
schemars = "0.8.12"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
serde_yaml = "0.9"

tracing = {version = "0.1", features = ["log"]}
tracing-subscriber = {version = "0.3", features = [
  "registry",
  "env-filter",
  "json",
]}

# audio
cpal = {version = "0.15.0", optional = true}
hound = {version = "3.5", optional = true}
tempdir = {version = "0.3.7", optional = true}

# mqtt
base64 = "0.21.0"
rumqttc = {version = "0.20.0", optional = true}

# terminal stuff
chrono = "0.4"
dialoguer = {version = "0.10.3", features = ["history", "fuzzy-select"]}
directories = "4.0"
termimad = "0.22"
